--- a/css/styling/_mobil.scss
+++ b/css/styling/_mobil.scss
@@ -7,11 +7,11 @@
         }
 
         .home_section {
-            height: 70vh;
+            height: 90vh;
 
             .home_content {
                 width: 80%;
-                gap: 10px;
+                gap: 25px;
 
                 .h1_projekter{
                     display: none;
@@ -145,10 +145,11 @@
     .webProjekter_body {
         .webProjekter {
             .home_section {
-                height: 80vh;
+                height: 90vh;
 
                 .home_content {
                     width: 80%;
+                    gap: 25px;
 
                     p {
                         width: 100%;
